--- a/brochure-design.html
+++ b/brochure-design.html
@@ -2,7 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Brochure Designing</title>
+<title>Comprehensive Digital Marketing, Software Development, and Website Development Services | TECHNOARTZ</title>
+
+<meta name="keywords" content="brochure design services, custom brochure design, professional brochure designers, tri-fold brochures, bi-fold brochures, digital brochure design, marketing brochures, informative brochures, creative brochure design, brand promotion materials, high-quality brochure design, Technoartz, print design services, visual marketing materials, engaging brochures, business brochure design, affordable brochure design, brochure design trends 2024, promotional brochures">
+
+<meta name="description" content="Technoartz specializes in professional brochure design services, creating visually appealing and informative brochures that effectively communicate your brand message. Our designers craft custom brochures for various formats, including tri-folds, bi-folds, and digital brochures, tailored to your business needs. Elevate your marketing materials with high-quality designs that engage your audience and drive conversions. Contact us for creative brochure design solutions that make a lasting impression.">
+
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -86,7 +91,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Brochure Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -101,7 +106,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Brochure Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -116,7 +121,7 @@
                                     	<div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="" />
+                                                    <img src="images/resource/author-9.jpg" alt="Brochure Designing" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
@@ -138,7 +143,7 @@
 						<div class="inner-box">
                         	<h2>Brochure Designing</h2>
                             <div class="image">
-                            	<img src="images/services/brochure design.jpg" alt="" />
+                            	<img src="images/services/brochure design.jpg" alt="Brochure Designing" />
                             </div>
                             <div class="lower-content">
                             	<div class="text">
