--- a/dynamic-website.html
+++ b/dynamic-website.html
@@ -103,7 +103,7 @@
                                         <div class="upper-box">
                                             <div class="upper-inner">
                                                 <div class="image">
-                                                    <img src="images/resource/author-9.jpg" alt="Dynamic Web Development" />
+                                                    <img src="images/resource/author-9.jpg" alt="Dynamic Web Developments" />
                                                 </div>
                                                 <h3>Teena Venanda</h3>
                                                 <div class="location">Newyork City</div>
