--- a/logo-design.html
+++ b/logo-design.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Logo Designing</title>
+<title>Comprehensive Digital Marketing, Software Development, and Website Development Services | TECHNOARTZ</title>
+<meta name="keywords" content="logo design services, custom logo design, professional logo designers, unique logos, brand identity design, creative logo design, logo redesign, logo for business, memorable logos, visual branding, affordable logo design, Technoartz, brand logo creation, corporate logo design, small business logo, logo design company, modern logo design, logo design trends 2024, minimalist logo, logo design inspiration">
+
+<meta name="description" content="Technoartz offers expert logo design services to create unique, memorable, and visually appealing logos that represent your brand identity. Our professional logo designers craft custom logos that stand out and communicate your brand’s message effectively. Whether you need a new logo or a logo refresh, our team delivers creative and impactful logo designs tailored to your business. Contact us for a custom logo design that elevates your brand’s visual presence.">
+
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -135,7 +139,7 @@
 						<div class="inner-box">
                         	<h2>Logo Designing</h2>
                             <div class="image">
-                            	<img src="images/services/logo design.jpg" alt="" />
+                            	<img src="images/services/logo design.jpg" alt="Logo Designing" />
                             </div>
                             <div class="lower-content">
                             	<div class="text">
